# libheif

./: .gitignore  CMakeLists.txt  CMakeUserPathsGit.cmake  libheif.cmake.in
examples/: heif_enc.cc
extra/: getopt.c  getopt_long.c
libheif/: CMakeLists.txt  box.cc  heif.cc  heif.h  heif_context.cc  heif_context.h  heif_emscripten.h  heif_encoder_x265.cc
